ingress/green-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: v2
  template:
    metadata:
      labels:
        app: v2
    spec:
      containers:
        - name: cont1
          image: nasi101/tetris
          ports:
            - containerPort: 80
