ingress/blue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetrisv1
spec:
  type: ClusterIP
  selector:
    app: v1
  ports:
    - port: 80
      targetPort: 3000
