ingress/green-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetrisv2
spec:
  type: ClusterIP
  selector:
    app: v2
  ports:
    - port: 80
      targetPort: 80
